# GitHub_Repo_Duplicator_for_Templates

./: .gitignore  CHANGELOG.md  Instruction.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: DIRECTORY.md  PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.md
.github/workflows/: README.md  python-tests.yml  release.yml
assets/: README.md
docs/: DEVELOPER.md  README.md
docs/.github/: README.md
docs/img/: README.md
environment/: README.md  environment.yml
release/github_repo_duplicator-1.0.0/: install.sh  install_standalone.sh
release/github_repo_duplicator-1.2.3/: README.md
release/github_repo_duplicator-1.2.6/: install.ps1
scripts/: README.md  github_repo_duplicator_cli.py  run.py  setup_conda.sh
src/: README.md
src/github_repo_duplicator/: README.md  __init__.py  ascii_icon.txt  cli.py  create_icon.py  duplicator.py
src/github_repo_duplicator.egg-info/: README.md
src/github_repo_duplicator/__pycache__/: README.md
tests/: README.md  __init__.py  test_duplicator.py
tests/__pycache__/: README.md
